Replace image source with new image file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Vítejte na mé stránce</h1>
     <p>Tady bude můj text.</p>
 
-    <img src="moje-fotka.jpg" alt="Moje fotka" width="300">
+    <img src="nastaveni.png" alt="Moje fotka" width="300">
 </body>
 </html>
