--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Vítejte na mé stránce</h1>
-    <p>Tady bude můj text.</p>
+    <p>Tady je nastavení prostředí v Mosaiku : </p>
 
     <img src="nastaveni.jpg" alt="Moje fotka" width="500">
 </body>
