Update content in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>Vítejte na mé stránce</h1>
-    <p>Tady je nastavení prostředí v Mosaiku : </p>
+    <p>Na těchto stránkách budu postupně přidávat řešení úloh a jejich vysvětlení.</p>
+    <p>Níže je úloha Dopravník s Krokovým Motorem. </p>
+    
+    <p>Tady je nastavení prostředí v Mosaiku: </p>
 
     <img src="nastaveni.jpg" alt="Moje fotka" width="500">
 </body>
