Add additional paragraphs to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <h1>Vítejte na mé stránce</h1>
     <p>Na těchto stránkách budu postupně přidávat řešení úloh a jejich vysvětlení.</p>
     <p>Níže je úloha Dopravník s Krokovým Motorem. </p>
+    <p>Zatím má dvě části: Nastavení a podtím je program. </p>
+    <p>Program jsem napsal minulý týden a vyzkoušel. Funguje správně. </p>
+    <p>Projděte si to a kdyby někdo měl dotaz napište ho do komentářů, </p>
+    <p>budu na dotazy v komentářích průběžně odpovídat. </p>
+    
     
     <p>Tady je nastavení prostředí v Mosaiku: </p>
 
