--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <p>Níže je úloha Dopravník s Krokovým Motorem. </p>
     <p>Zatím má dvě části: Nastavení a podtím je program. </p>
     <p>Program jsem napsal minulý týden a vyzkoušel. Funguje správně. </p>
-    <p>Projděte si to a kdyby někdo měl dotaz napište ho do komentářů, </p>
-    <p>budu na dotazy v komentářích průběžně odpovídat. </p>
+    <p>Projděte si to a kdyby někdo měl dotaz napište do mailu, </p>
+    <p>budu na dotazy v mailu průběžně odpovídat. </p>
     
     
     <p>Tady je nastavení prostředí v Mosaiku: </p>
