--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <div class="menu">
     <a class="item" href="tema1.html">
-        <img src="img/tema1.jpg" alt="Téma 1">
+        <img src="tema1.jpg" alt="Téma 1">
         <p>Téma 1 – Síťové technologie</p>
     </a>
 
