Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -59,32 +59,32 @@
     </a>
 
     <a class="item" href="tema2.html">
-        <img src="img/tema2.jpg" alt="Téma 2">
+        <img src="tema2.jpg" alt="Téma 2">
         <p>Téma 2 – Programování</p>
     </a>
 
     <a class="item" href="tema3.html">
-        <img src="img/tema3.jpg" alt="Téma 3">
+        <img src="tema3.jpg" alt="Téma 3">
         <p>Téma 3 – Hardware</p>
     </a>
 
     <a class="item" href="tema4.html">
-        <img src="img/tema4.jpg" alt="Téma 4">
+        <img src="tema4.jpg" alt="Téma 4">
         <p>Téma 4 – Operační systémy</p>
     </a>
 
     <a class="item" href="tema5.html">
-        <img src="img/tema5.jpg" alt="Téma 5">
+        <img src="tema5.jpg" alt="Téma 5">
         <p>Téma 5 – Databáze</p>
     </a>
 
     <a class="item" href="tema6.html">
-        <img src="img/tema6.jpg" alt="Téma 6">
+        <img src="tema6.jpg" alt="Téma 6">
         <p>Téma 6 – Bezpečnost</p>
     </a>
 
     <a class="item" href="tema7.html">
-        <img src="img/tema7.jpg" alt="Téma 7">
+        <img src="tema7.jpg" alt="Téma 7">
         <p>Téma 7 – Maturitní příklady</p>
     </a>
 </div>
