Update topic descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -55,37 +55,37 @@
 <div class="menu">
     <a class="item" href="tema1.html">
         <img src="tema1.jpg" alt="Téma 1">
-        <p>Téma 1 – Síťové technologie</p>
+        <p>Úloha 1 – Krokový Dopravník</p>
     </a>
 
     <a class="item" href="tema2.html">
         <img src="tema2.jpg" alt="Téma 2">
-        <p>Téma 2 – Programování</p>
+        <p>Úloha 2 – 3D Robot</p>
     </a>
 
     <a class="item" href="tema3.html">
         <img src="tema3.jpg" alt="Téma 3">
-        <p>Téma 3 – Hardware</p>
+        <p>Úloha 3 – 3D Sklad</p>
     </a>
 
     <a class="item" href="tema4.html">
         <img src="tema4.jpg" alt="Téma 4">
-        <p>Téma 4 – Operační systémy</p>
+        <p>Úloha 4 – Vakuový Robot</p>
     </a>
 
     <a class="item" href="tema5.html">
         <img src="tema5.jpg" alt="Téma 5">
-        <p>Téma 5 – Databáze</p>
+        <p>Úloha 5 – Automatická Pračka</p>
     </a>
 
     <a class="item" href="tema6.html">
         <img src="tema6.jpg" alt="Téma 6">
-        <p>Téma 6 – Bezpečnost</p>
+        <p>Úloha 6 – Mísící Jednotka</p>
     </a>
 
     <a class="item" href="tema7.html">
         <img src="tema7.jpg" alt="Téma 7">
-        <p>Téma 7 – Maturitní příklady</p>
+        <p>Úloha 7 – Hydraulická Posuvná Jednotka</p>
     </a>
 </div>
 
