Add PDF embedding to tema6.html

--- a/tema6.html
+++ b/tema6.html
@@ -7,6 +7,12 @@
 <body>
     <p>Tady je nastavení prostředí v Mosaiku: </p>
 
+    <!-- Vložení pdf -->
+    src="pdf6.pdf"
+    width="100%"
+    height="600px"
+    style="border:none;"
+    
     <!-- Vložení obrázku -->
     <img src="nastaveni6.jpg" alt="Moje fotka" width="500">
 
