--- a/tema5.html
+++ b/tema5.html
@@ -8,10 +8,12 @@
     <p>Tady je nastavení prostředí v Mosaiku: </p>
 
     <!-- Vložení pdf -->
+    <iframe
     src="pdf5.pdf"
     width="100%"
     height="600px"
     style="border:none;"
+    ></iframe>
     
     <!-- Vložení obrázku -->
     <img src="nastaveni5.jpg" alt="Moje fotka" width="500">
