--- a/tema6.html
+++ b/tema6.html
@@ -8,11 +8,13 @@
     <p>Tady je nastavení prostředí v Mosaiku: </p>
 
     <!-- Vložení pdf -->
+    <iframe
     src="pdf6.pdf"
     width="100%"
     height="600px"
     style="border:none;"
-    
+    ></iframe>
+        
     <!-- Vložení obrázku -->
     <img src="nastaveni6.jpg" alt="Moje fotka" width="500">
 
