--- a/tema5.html
+++ b/tema5.html
@@ -5,7 +5,7 @@
     <title>Moje stránka</title>
 </head>
 <body>
-    <p>Tady je nastavení prostředí v Mosaiku: </p>
+    <p>Tady je Datasheet k pračce: </p>
 
     <!-- Vložení pdf -->
     <iframe
