Update paragraph text in tema7.html

--- a/tema7.html
+++ b/tema7.html
@@ -5,7 +5,7 @@
     <title>Moje stránka</title>
 </head>
 <body>
-    <p>Tady je nastavení prostředí v Mosaiku: </p>
+    <p>Tady je Datasheet k Hydraulické posuvné jednotce: </p>
 
     <!-- Vložení pdf -->
     <iframe
