--- a/tema5.html
+++ b/tema5.html
@@ -21,11 +21,12 @@
     
     <h2>Příklad Řešení:</h2>
     <p>Nevuádím kód protože ho nemám odladěný </p>
+    <p>Nastavují se nebo čtou výstupy a vstupy na TRUE nebo FALSE, které jsou popsané v PDF Datasheetu nahoře </p>
     <p>Kód je ale jednoduchý jde o funkce:</p>
-    <p>Časovač: TON, TOF</p>
-    <p>Čítač: CTU, CTD, CTUD</p>
+    <p>Časovače: TON, TOF</p>
+    <p>Čítače: CTU, CTD, CTUD</p>
     <p>Detekce hran: F_TRIG, R_TRIG</p>
-    <p>Pomocí těchto funkcí se program jistě napíše poměrně jednoduše. </p>
+    <p>Pomocí těchto funkcí vytvoří program. </p>
     <p>Když se název funkce napíše do Mosaic do programu a klikne se na název kurzor a zmáčkne se F1 </p>
     <p> tak se otevře nápověda v Mosaic k příkazu</p>
     <p> pokud chcete v Mosaicu češtinu tak nastavení je na liště: tools / languages / čeština </p>
