--- a/tema5.html
+++ b/tema5.html
@@ -26,7 +26,7 @@
     <p>Časovače: TON, TOF</p>
     <p>Čítače: CTU, CTD, CTUD</p>
     <p>Detekce hran: F_TRIG, R_TRIG</p>
-    <p>Pomocí těchto funkcí vytvoří program. </p>
+    <p>Pomocí těchto funkcí se vytvoří program. </p>
     <p>Když se název funkce napíše do Mosaic do programu a klikne se na název kurzor a zmáčkne se F1 </p>
     <p> tak se otevře nápověda v Mosaic k příkazu</p>
     <p> pokud chcete v Mosaicu češtinu tak nastavení je na liště: tools / languages / čeština </p>
