--- a/index.html
+++ b/index.html
@@ -54,37 +54,37 @@
 
 <div class="menu">
     <a class="item" href="tema1.html">
-        <img src="tema1.jpg" alt="Téma 1">
+        <img src="tema1.jpg?v=1" alt="Téma 1">
         <p>Úloha 1 – Krokový Dopravník</p>
     </a>
 
     <a class="item" href="tema2.html">
-        <img src="tema2.jpg" alt="Téma 2">
+        <img src="tema2.jpg?v=1" alt="Téma 2">
         <p>Úloha 2 – 3D Robot</p>
     </a>
 
     <a class="item" href="tema3.html">
-        <img src="tema3.jpg" alt="Téma 3">
+        <img src="tema3.jpg?v=1" alt="Téma 3">
         <p>Úloha 3 – 3D Sklad</p>
     </a>
 
     <a class="item" href="tema4.html">
-        <img src="tema4.jpg" alt="Téma 4">
+        <img src="tema4.jpg?v=1" alt="Téma 4">
         <p>Úloha 4 – Vakuový Robot</p>
     </a>
 
     <a class="item" href="tema5.html">
-        <img src="tema5.jpg" alt="Téma 5">
+        <img src="tema5.jpg?v=1" alt="Téma 5">
         <p>Úloha 5 – Automatická Pračka</p>
     </a>
 
     <a class="item" href="tema6.html">
-        <img src="tema6.jpg" alt="Téma 6">
+        <img src="tema6.jpg?v=1" alt="Téma 6">
         <p>Úloha 6 – Mísící Jednotka</p>
     </a>
 
     <a class="item" href="tema7.html">
-        <img src="tema7.jpg" alt="Téma 7">
+        <img src="tema7.jpg?v=1" alt="Téma 7">
         <p>Úloha 7 – Hydraulická Posuvná Jednotka</p>
     </a>
 </div>
