Prevent caching and update iframe source
Added meta tags to prevent caching and updated iframe source URL.

--- a/tema7.html
+++ b/tema7.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Moje stránka</title>
+
+    <!-- Anti-cache pro HTML automaticke obnovení stránky pro uživatele při změně stránky programátorem--> 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"> 
+    <meta http-equiv="Pragma" content="no-cache"> 
+    <meta http-equiv="Expires" content="0">
+    
 </head>
 <body>
     <!-- Vložení pdf -->
     <iframe
-    src="pdf7.pdf"
+    src="pdf7.pdf?v=1"
     width="100%"
     height="600px"
     style="border:none;"
