--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Úlohy pro 4. ročník</title>
+
+    <!-- Anti-cache pro HTML automaticke obnovení stránky pro uživatele při změně stránky programátorem--> 
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"> 
+    <meta http-equiv="Pragma" content="no-cache"> 
+    <meta http-equiv="Expires" content="0">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
